<resources>
    <string name="app_name">Anime Downloader</string>

    <string name="test_ad_banner_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="app_key">5f865b6b556071ec56761271b7e09a91e13839bb06c8894f</string>
    <string name="download_video">Download Video</string>
    <string name="stream_video">Stream Video</string>
    <string name="how_to">How To Guide</string>

    <string name="how_to_description">1. First Select Beta Server or Kissanime Server to play video on the Kissanime Webpage.\n2. Once its selected you can stream anime into your favourite Video Player or download video to watch later.</string>
    <string name="rate_app">Rate App</string>
    <string name="share_app">Share App</string>

    <string name="disclaimer">Anime Downloader is a Mobile Application that allows users to download/stream media content available on the web and manage them on their device.
By Downloading media content from web using Anime Downloader, Users declare to have the right to legitimately extract and download a personal copy of that content, in accordance with their applicable legislation, copyright licenses and the terms of service of the source site.
Anime Downloader does not represent or guarantee that the contents downloaded are free from loss, corruption, attack, viruses, interference, hacking or any other security intrusion, and disclaims any and all liability thereto.
\n\nUnder no circumstances Anime Downloader shall be deemed liable for any unauthorised download of third parties\' media contents that the user can download.
Under no circumstances Anime Downloader shall be deemed liable for any unauthorised download of third parties\' media contents for the unauthorised use of the downloaded content and for any copyright infringement or leagal breach whatsoever.
The User accepts and undertakes to indemnify and keep indemnified Anime Downloader for all the liabilities and losses, including legal costs and fines, incurred in connection with the download from the web and/or use of media contents, or from damages arising from the breach of whatsover obligation of the User in relation with third-party services.

\n\nBy accepting, you also declare to agree with our <a href="https://docs.google.com/document/d/1_CycxS11jfvL2OdXHVPPPtc4zn2ON6Q2tP1r45ehqnw/edit?usp=sharing">Privacy Policy</a>      </string>

    <string name="credit_string">Icons made by <a href="https://www.flaticon.com/authors/smashicons" title="Smashicons">Smashicons</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></string>
    <string name="reload">Reload</string>

</resources>

